fixing alignment of buttons

--- a/app/assets/stylesheets/starter-template.css
+++ b/app/assets/stylesheets/starter-template.css
@@ -16,5 +16,5 @@ a, a:hover, a:active, a:visited {
 }
 
 .label {
-  font-size: 14px;
+  font-size: 12px;
 }
